Dev-2: Fixed links being too light.

--- a/css/global.css
+++ b/css/global.css
@@ -90,7 +90,7 @@ table {
 	font-size: 14px;
 }
 
-.thead a:link {
+.thead a:link{
 	color: #dfdfdf;
 	text-decoration: none;
 }
@@ -100,8 +100,7 @@ table {
 	text-decoration: none;
 }
 
-.thead a:hover,
-.thead a:active {
+.thead a:hover, .thead a:active{
 	color: #dfdfdf;
 	text-decoration: none;
 }
@@ -129,7 +128,23 @@ table {
 .trow1,.trow2 {
 	background: #fff;
 	border-bottom: 1px solid #ddd;
-  padding: 6px;
+	padding: 6px;
+}
+
+.trow1 a:link, .trow2 a:link{
+	color: #222;
+	text-decoration: none;
+}
+
+.trow1 a:visited, .trow2 a:visited {
+	color: #222;
+	text-decoration: none;
+}
+
+.trow1 a:hover, .trow1 a:active,
+.trow2 a:hover, .trow2 a:active{
+	color: #222;
+	text-decoration: none;
 }
 
 .trow_shaded {
